--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-bert_score==0.3.13
+bert-score==0.3.13
 chromadb==1.0.12
 datasets==3.6.0
-google_cloud_aiplatform==1.94.0
-json_repair==0.46.0
+google-cloud-aiplatform==1.71.1
+json_repair==0.46.2
 numpy==2.2.6
 pandas==2.3.0
 pydantic==2.11.7
-sentence_transformers==4.1.0
+sentence-transformers==4.1.0
 tqdm==4.67.1
-vllm==0.9.0
-xtuner
+transformers==4.52.4
+vertexai==1.71.1
+vllm==0.9.1
+xtuner==0.1.23
